fixed spacing after switching to 'pre' whitspace

--- a/fe_overhaul/src/stories/components/Terminal/TinyTerm.css
+++ b/fe_overhaul/src/stories/components/Terminal/TinyTerm.css
@@ -12,7 +12,7 @@
   font-size: 14px;
   color: #2ba035;
   background-color: black;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 /*
 .TinyTerm-cursor {
